# src/main/resources/openapi/crm.yaml
@@ -1,20 +1,20 @@
 openapi: 3.0.3
 info:
-    title: Siebel Create Company
+    title: Siebel Create Relation
     description: |-
     version: 1.0.11
 servers:
     -   url: https://crm.rabobank.nl/api/v3
 paths:
-    /company/{relationId}:
+    /relation/{relationId}:
         get:
-            summary: Find company by relationId
+            summary: Find relation by relationId
             description: Returns a single organisation
-            operationId: getCompanyByRelationId
+            operationId: getRelationByRelationId
             parameters:
                 -   name: relationId
                     in: path
-                    description: relationId of company to return
+                    description: relationId of relation to return
                     required: true
                     schema:
                         type: string
@@ -24,41 +24,41 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Company'
+                                $ref: '#/components/schemas/Relation'
                 '400':
                     description: Invalid ID supplied
                 '404':
-                    description: Company not found
-    /company:
+                    description: Relation not found
+    /relation:
         post:
-            summary: Create new company record
-            operationId: createCompany
+            summary: Create new relation record
+            operationId: createRelation
             requestBody:
                 required: true
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/CreateCompany'
+                            $ref: '#/components/schemas/CreateRelation'
             responses:
                 '200':
                     description: successful operation
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Company'
+                                $ref: '#/components/schemas/Relation'
                 '400':
                     description: Invalid ID supplied
                 '404':
-                    description: Company not found
+                    description: Relation not found
 components:
     schemas:
-        CreateCompany:
+        CreateRelation:
             required:
-                - kvkNumber
+                - cin
                 - name
             type: object
             properties:
-                kvkNumber:
+                cin:
                     type: string
                     maxLength: 8
                     minLength: 8
@@ -67,15 +67,10 @@ components:
                     type: string
                     example: Frituur Jos
                     maxLength: 100
-                parent:
-                    type: string
-                    maxLength: 12
-                    minLength: 12
-                    example: 123456789012
-        Company:
+        Relation:
             required:
                 - relationId
-                - kvkNumber
+                - cin
                 - name
             type: object
             properties:
@@ -84,7 +79,7 @@ components:
                     maxLength: 12
                     minLength: 12
                     example: 123456789012
-                kvkNumber:
+                cin:
                     type: string
                     maxLength: 8
                     minLength: 8
@@ -93,14 +88,11 @@ components:
                     type: string
                     example: Frituur Jos
                     maxLength: 100
-                director:
+                status:
                     type: string
+                    enum: [PROSPECT, CUSTOMER, INACTIVE]
                     example: G. de Bruin
                     maxLength: 100
-                daughters:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/Company'
         ApiResponse:
             type: object
             properties:
